update: improving ux on tags

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -17,3 +17,14 @@ body {
 .btn {
     background: #ff0000;
 }
+
+
+@layer utilities {
+    .no-scrollbar::-webkit-scrollbar {
+        display: none;
+    }
+    .no-scrollbar {
+        -ms-overflow-style: none; 
+        scrollbar-width: none; 
+    }
+}
